src/objects/inscor__Government_Solicitation__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Government Solicitations</relationshipLabel>
        <relationshipName>Government_Solicitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>inscor__Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>inscor__Days_to_Delivery__c</fullName>
        <label>Days to Delivery</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Delivery_Information__c</fullName>
        <description>ShippingAddress</description>
        <label>Delivery Information</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Estimated_Value__c</fullName>
        <label>Estimated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Expires_On__c</fullName>
        <label>Expires On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__First_Article__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Article</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Hub_Zone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hub Zone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Inspection_At__c</fullName>
        <label>Inspection At</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Issued_On__c</fullName>
        <label>Issued On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Line_Description__c</fullName>
        <description>LineNumberDescription</description>
        <label>Line Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Line_FSC__c</fullName>
        <label>Line FSC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Line_NIIN__c</fullName>
        <label>Line NIIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Line_NSN__c</fullName>
        <label>Line NSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Line_Number__c</fullName>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Line_Quantity__c</fullName>
        <label>Line Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Line_UOM__c</fullName>
        <label>Line UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Nsn__c</fullName>
        <label>Nsn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Government Solicitations</relationshipLabel>
        <relationshipName>Government_Solicitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Procurement_Item_Description__c</fullName>
        <description>Pid</description>
        <label>Procurement Item Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__PurchaseRequestNumber__c</fullName>
        <label>Purchase Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__SOLNumAndLineNumber__c</fullName>
        <externalId>true</externalId>
        <label>SOLNumAndLineNumber</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Small_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Small Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Solicitation_Number__c</fullName>
        <label>Solicitation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Solicitation_Score__c</fullName>
        <label>Solicitation Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Solicitation_Tech_Docs_URL__c</fullName>
        <label>Solicitation Tech Docs URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>inscor__Solicitation_URL__c</fullName>
        <label>Solicitation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>inscor__Source_of_Service__c</fullName>
        <label>Source of Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Veteran_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veteran Owned</label>
        <type>Checkbox</type>
    </fields>
    <label>Government Solicitation</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Solicitation_Number__c</columns>
        <columns>inscor__Line_Number__c</columns>
        <columns>inscor__Part_Number__c</columns>
        <columns>inscor__Solicitation_Score__c</columns>
        <columns>inscor__Nsn__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>inscor__Estimated_Value__c</columns>
        <columns>inscor__Line_FSC__c</columns>
        <columns>inscor__Line_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GS-{0}</displayFormat>
        <label>Government Solicitation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Government Solicitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>